[metadata]
name = TerrainAnalyser
version = 1.0.3
author = Julius Gudauskas
author_email = julgud@ktu.lt
description = Package for terrain analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JuliusKTU/TerrainAnalyser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
packages=
[options]
packages = find:
python_requires = >=3.7
include_package_data = True